TopAnalyzer/macros/slurm/run2017/SingleElectron/SBR/slurm-16873758.out
g++ `root-config --cflags --glibs` -lGenVector DataYield12.C ConstrainedFit.cc -o fit12 && ./fit12
DataYield12.C: In function 'int main()':
DataYield12.C:399:28: error: expected ';' before 'continue'
               if(chi2 > 12 continue;
                            ^~~~~~~~
DataYield12.C:400:15: error: expected primary-expression before 'if'
               if(bp.M() < 3 || bp.M() > 5.5) continue;
               ^~
DataYield12.C:400:15: error: expected ')' before 'if'
DataYield12.C:462:28: error: expected ';' before 'continue'
               if(chi2 > 12 continue;
                            ^~~~~~~~
DataYield12.C:463:15: error: expected primary-expression before 'if'
               if(fit.VertexMass() < 1.8 || fit.VertexMass() > 1.95) continue;
               ^~
DataYield12.C:463:15: error: expected ')' before 'if'
DataYield12.C:517:28: error: expected ';' before 'continue'
               if(chi2 > 12 continue;
                            ^~~~~~~~
DataYield12.C:518:15: error: expected primary-expression before 'if'
               if(b0.M() < 3 || b0.M() > 5) continue;
               ^~
DataYield12.C:518:15: error: expected ')' before 'if'
DataYield12.C:587:28: error: expected ';' before 'continue'
               if(chi2 > 12 continue;
                            ^~~~~~~~
DataYield12.C:588:15: error: expected primary-expression before 'if'
               if(abs(kk.M()-mphi) > 0.01) continue;
               ^~
DataYield12.C:588:15: error: expected ')' before 'if'
DataYield12.C:668:28: error: expected ';' before 'continue'
               if(chi2 > 12 continue;
                            ^~~~~~~~
DataYield12.C:670:115: error: expected ')' before ';' token
               cout<<"  Kpipi: "<<kpipi.M()<<"  KKpi: "<<kkpi.M()<<"  Kpipi-Kpi: "<<kpipi.M()<<" - "<<kpi.M()<<endl;
                                                                                                                   ^
